@@ -8,8 +8,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.json.JsonMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -45,16 +46,16 @@ public class HTTP {
   }
 
   private static <T> T read(String url, String token, Class<T> cls)
-      throws IOException, InterruptedException {
-    URLConnection uc = new URL(url).openConnection();
-    uc.setRequestProperty("Authorization", "Bearer " + token);
+      throws MalformedURLException, IOException, URISyntaxException {
+    URLConnection uc = new URI(url).toURL().openConnection();
+    if (token != null) uc.setRequestProperty("Authorization", "Bearer " + token);
     String text = new String(uc.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     ObjectMapper mapper = JsonMapper.builder().addModule(new JavaTimeModule()).build();
     return mapper.readValue(text, cls);
   }
 
   public static List<Entity> readEntities(String repoUrl, String token)
-      throws IOException, InterruptedException {
+      throws MalformedURLException, URISyntaxException, IOException {
     EntityPage page1 = HTTP.read(repoUrl + "/entity", token, EntityPage.class);
     List<Entity> entities = page1.getContent();
     for (int i = 2; i <= page1.getTotalPages(); i++) {
@@ -65,7 +66,7 @@ public class HTTP {
   }
 
   public static Repository readRepository(String repoUrl, String token)
-      throws IOException, InterruptedException {
+      throws MalformedURLException, IOException, URISyntaxException {
     return HTTP.read(repoUrl, token, Repository.class);
   }
 }
